--- a/src/public/splash.html
+++ b/src/public/splash.html
@@ -1,10 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../assets/css/nf-splash.css">
     <title>Loading..</title>
+    <style>
+        *, *:before, *:after {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            user-select: none;
+            cursor: default;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #333;
+            color: #ccc;
+            font-family: Arial, sans-serif;
+        }
+
+        img {
+            width: 4rem;
+            height: 4rem;
+        }
+
+        .row {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+            margin-bottom: .5rem;
+        }
+
+        h1 > span {
+            color: #eb7763;
+        }
+
+        .loading-container {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: .5rem;
+            margin-top: 4rem;
+            color: #eb7763;
+            font-size: 1.25rem;
+        }
+
+        @keyframes bounce {
+            0%,20% {
+                transform: translate(0, 0);
+            }
+            50% {
+                transform: translate(0, -30px);
+                color: #cf4a33;
+            }
+            80%, 100% {
+                transform: translate(0, 0);
+            }
+        }
+
+        .loading-container i {
+            animation: bounce 4s infinite;
+        }
+
+        .loading-container i:nth-child(1) {
+            animation-delay: .5s;
+        }
+
+        .loading-container i:nth-child(2) {
+            animation-delay: 1s;
+        }
+
+        .loading-container i:nth-child(3) {
+            animation-delay: 1.5s;
+        }
+
+        .loading-container i:nth-child(4) {
+            animation-delay: 2s;
+        }
+
+        .loading-container i:nth-child(5) {
+            animation-delay: 2.5s;
+        }
+    </style>
 </head>
 <body>
-    <h1>Loading</h1>
+    <div class="row">
+        <img src="logo.png" alt="Logo">
+        <h1><span>Neko</span>Viewer</h1>
+    </div>
+    <div class="loading-container">
+        <i class="nf nf-md-paw"></i>
+        <i class="nf nf-md-paw"></i>
+        <i class="nf nf-md-paw"></i>
+        <i class="nf nf-md-paw"></i>
+        <i class="nf nf-md-paw"></i>
+    </div>
 </body>
 </html>
