--- a/src/public/splash.html
+++ b/src/public/splash.html
@@ -72,23 +72,23 @@
         }
 
         .loading-container i:nth-child(1) {
-            animation-delay: .5s;
+            animation-delay: 0;
         }
 
         .loading-container i:nth-child(2) {
-            animation-delay: 1s;
+            animation-delay: 0.5s;
         }
 
         .loading-container i:nth-child(3) {
-            animation-delay: 1.5s;
+            animation-delay: 1s;
         }
 
         .loading-container i:nth-child(4) {
-            animation-delay: 2s;
+            animation-delay: 1.5s;
         }
 
         .loading-container i:nth-child(5) {
-            animation-delay: 2.5s;
+            animation-delay: 2s;
         }
     </style>
 </head>
