fix: mismatched property value error

--- a/src/spa-loading-template.html
+++ b/src/spa-loading-template.html
@@ -71,7 +71,7 @@
     }
 
     .loading-container i:nth-child(1) {
-        animation-delay: 0;
+        animation-delay: 0s;
     }
 
     .loading-container i:nth-child(2) {
